--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,10 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  display: flex;
   justify-content: center;
+  align-items: center;
+  min-height: 100vh
 }
 
 form {
