--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 body, html {
   margin: 0;
   padding: 0;
@@ -19,7 +18,7 @@ body, html {
 }
 
 .banner {
-  max-width: 800px;
+  max-width: 300px;
   width: 80%;
   margin-bottom: 40px;
 }
@@ -55,7 +54,7 @@ body, html {
   padding: 12px 25px;
   font-size: 16px;
   background-color: #007bff;
-  color: white;
+  color: black;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -84,7 +83,7 @@ body, html {
 
 .table th {
   background-color: #007bff;
-  color: white;
+  color: black;
 }
 
 .table tr:nth-child(even) {
