--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body, html {
 .form button {
   padding: 12px 20px;
   font-size: 16px;
-  background-color: #007bff;
+  background-color: green;
   color: black;
   border: none;
   border-radius: 8px;
