--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 body, html {
   margin: 0;
   padding: 0;
@@ -46,14 +45,14 @@ body, html {
 }
 
 .form input:focus {
-  border-color: #2ecc71; /* zielony akcent przy focusie */
+  border-color: #2ecc71;
   box-shadow: 0 0 5px rgba(46, 204, 113, 0.5);
 }
 
 .form button {
   padding: 12px 20px;
   font-size: 16px;
-  background-color: #2ecc71; /* zielony przycisk */
+  background-color: #2ecc71;
   color: white;
   border: none;
   border-radius: 12px;
@@ -84,7 +83,7 @@ body, html {
 }
 
 .table th {
-  background-color: #2ecc71; /* zielone nagłówki */
+  background-color: #2ecc71;
   color: white;
 }
 
